# KMeans_CUDA

./: .gitignore  README.md
KMeansProject/: KMeansProject.sln
KMeansProject/KMeansProject/: CMakeLists.txt  KMeansProject.vcxproj  file_io.cpp  file_io.h  main.cpp
KMeansProject/KMeansProject/CPUSolution/: cpu_implementation.cpp  cpu_implementation.h
KMeansProject/KMeansProject/GPUSolution/: gpu1_kernel_functions.cu  gpu1_kernel_functions.cuh  gpu2_kernel_functions.cu  gpu2_kernel_functions.cuh  k_means_data.cu  k_means_data.h
KMeansProject/KMeansProject/data/: data.txt
